--- a/examples/grids/fixed.html
+++ b/examples/grids/fixed.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <title>Columns Example</title>
-  <link rel="stylesheet" href="../../build/pure.css">
+  <link rel="stylesheet" href="../../build/base.css">
 
   <style type="text/css">
     .first { background-color: #aaa }
@@ -18,7 +18,7 @@
 </head>
 <body>
 
-<div class="fluid container">
+<div class="container">
   <h1>Fixed grid</h1>
 
   <div class="fixed grid">
