Added fixed + responsive grid support. No need for fixed span widths.

--- a/examples/grids/fixed.html
+++ b/examples/grids/fixed.html
@@ -19,7 +19,7 @@
 <body>
 
 <div class="container">
-  <h1>Fixed grid</h1>
+  <h1>Non responsive, fixed grid</h1>
 
   <div class="fixed grid">
     <div class="span6">
