--- a/examples/grids/fluid.html
+++ b/examples/grids/fluid.html
@@ -19,9 +19,9 @@
 <body>
 
 <div class="container">
-  <h1>Responsive, fluid grid</h1>
+  <h1>Non responsive, fluid grid</h1>
 
-  <div class="responsive grid">
+  <div class="grid">
     <div class="span6">
         <div class="l-box">
             <h3>Fast</h3>
