--- a/examples/buttons/button.html
+++ b/examples/buttons/button.html
@@ -2,12 +2,12 @@
 <html>
 <head>
     <title>Button Manual Tests</title>
-    <link rel="stylesheet" href="../../../../build/pure-min.css">
+    <link rel="stylesheet" href="../../build/base-min.css">
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome.css">
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/3.0.2/css/font-awesome-ie7.css">
 
     <style>
-        .pure-button-green {
+        .btn-green {
             text-transform: uppercase;
             font-weight:bold;
             color: white;
@@ -17,7 +17,7 @@
             text-shadow: 0 1px 1px rgb(22, 116, 29);
         }
 
-        .pure-button-red {
+        .btn-red {
             background: red;
             text-transform: uppercase;
             color: white;
@@ -27,19 +27,19 @@
             border-radius: 20px;
         }
 
-        .pure-button-yellow {
+        .btn-yellow {
             background: rgb(255, 236, 15);
             color: rgb(146, 128, 32);
             border: 1px solid rgb(201, 189, 52);
             text-shadow: -1px 1px 1px white;
         }
 
-        .pure-button-wedding:hover,
-        .pure-button-wedding:focus {
+        .btn-wedding:hover,
+        .btn-wedding:focus {
             background: #555;
             color: #eee;
         }
-        .pure-button-wedding:active {
+        .btn-wedding:active {
             background: #222;
             color: #fff;
             box-shadow: none;
@@ -52,49 +52,49 @@
 
     <h2>Regular Buttons</h2>
     <p>
-        <button class="pure-button">A Regular Button</button>
-        <a class="pure-button" href="#">An anchor Button</a>
+        <button class="btn">A Regular Button</button>
+        <a class="btn" href="#">An anchor Button</a>
     </p>
 
     <h2>Disabled Buttons</h2>
     <p>
-        <button class="pure-button pure-button-disabled" disabled>A Regular Button</button>
-        <a class="pure-button pure-button-disabled" href="#">An anchor Button</a>
+        <button class="btn btn-disabled" disabled>A Regular Button</button>
+        <a class="btn btn-disabled" href="#">An anchor Button</a>
     </p>
 
     <h2>Active Buttons</h2>
     <p>
-        <button class="pure-button pure-button-active">A Regular Button</button>
-        <a class="pure-button pure-button-active" href="#">An anchor Button</a>
+        <button class="btn btn-active">A Regular Button</button>
+        <a class="btn btn-active" href="#">An anchor Button</a>
     </p>
 
     <h2>Primary/Selected Buttons</h2>
     <p>
-        <button class="pure-button pure-button-primary">A Regular Button</button>
-        <a class="pure-button pure-button-primary" href="#">An anchor Button</a>
+        <button class="btn btn-primary">A Regular Button</button>
+        <a class="btn btn-primary" href="#">An anchor Button</a>
     </p>
 
     <h2>Customizing Buttons</h2>
     <p>
-        <button class="pure-button pure-button-green">A Custom Button</button>
-        <a class="pure-button pure-button-green" href="#">An anchor Button</a>
+        <button class="btn btn-green">A Custom Button</button>
+        <a class="btn btn-green" href="#">An anchor Button</a>
     </p>
     <p>
-        <button class="pure-button pure-button-red">Another custom Button</button>
-        <a class="pure-button pure-button-red" href="#">Custom Button</a>
+        <button class="btn btn-red">Another custom Button</button>
+        <a class="btn btn-red" href="#">Custom Button</a>
     </p>
     <p>
-        <button class="pure-button pure-button-yellow">Another custom Button</button>
-        <a class="pure-button pure-button-yellow" href="#">Custom Button</a>
+        <button class="btn btn-yellow">Another custom Button</button>
+        <a class="btn btn-yellow" href="#">Custom Button</a>
     </p>
 
     <p>
-        <button class="pure-button pure-button-wedding" href="#">
+        <button class="btn btn-wedding" href="#">
             <i class="icon-film"></i>
             Start Playing Movie
         </button>
 
-        <a class="pure-button pure-button-wedding" href="#">
+        <a class="btn btn-wedding" href="#">
             <i class="icon-film"></i>
             Start Playing Movie
         </a>
@@ -102,11 +102,19 @@
 
     <h2>Primary Form Buttons</h2>
     <p>
-        <a class="pure-button pure-button-primary" href="#">Anchor</a>
-        <button class="pure-button pure-button-primary">Button</button>
-        <input type="submit" class="pure-button pure-button-primary" value="Submit">
-        <input type="button" class="pure-button pure-button-primary" value="Input Button">
-        <input type="reset" class="pure-button pure-button-primary" value="Reset">
+        <a class="btn btn-primary" href="#">Anchor</a>
+        <button class="btn btn-primary">Button</button>
+        <input type="submit" class="btn btn-primary" value="Submit">
+        <input type="button" class="btn btn-primary" value="Input Button">
+        <input type="reset" class="btn btn-primary" value="Reset">
+
+        <button class="btn btn-secondary">Secondary</button>
+        <button class="btn btn-success">Success</button>
+        <button class="btn btn-danger">Danger</button>
+        <button class="btn btn-warning">Warning</button>
+        <button class="btn btn-cancel">Cancel</button>
+        <button class="btn btn-next">Next</button>
+        <button class="btn btn-previous">Previous</button>
     </p>
 </body>
 </html>
