--- a/examples/forms/forms.html
+++ b/examples/forms/forms.html
@@ -4,10 +4,7 @@
     <meta charset='utf-8'>
     <meta name="viewport" content="width = device-width">
     <title>Forms CSS Manual Test</title>
-    <link rel="stylesheet" type="text/css" href="../../../../build/base-min.css">
-    <link rel="stylesheet" type="text/css" href="../../../../build/grids-min.css">
-    <link rel="stylesheet" type="text/css" href="../../../../build/forms-min.css">
-    <link rel="stylesheet" type="text/css" href="../../../../build/buttons-min.css">
+    <link rel="stylesheet" type="text/css" href="../../build/base-min.css">
 
     <style>
         body {
@@ -23,7 +20,7 @@
 
     <h2>Default Form</h2>
 
-    <form class="pure-form">
+    <form class="form">
     <fieldset>
      <legend>A default inline form.</legend>
      <input type="text" placeholder="Email">
@@ -31,7 +28,7 @@
      <label>
      <input type="checkbox"> Remember me
      </label>
-     <button type="submit" class="pure-button">Sign in</button>
+     <button type="submit" class="button">Sign in</button>
     </fieldset>
     </form>
 
@@ -41,32 +38,32 @@
       Multi-column forms such as the one below can be created by pulling down YUI Grids.
      </p>
 
-     <form class="pure-form pure-form-stacked">
+     <form class="form form-stacked">
       <fieldset>
       <legend>Legend</legend>
 
-      <div class='pure-g-r'>
-       <div class='pure-u-1-3'>
+      <div class='g-r'>
+       <div class='u-1-3'>
         <label>First Name</label>
         <input type="text">
        </div>
-       <div class='pure-u-1-3'>
+       <div class='u-1-3'>
         <label>Password</label>
         <input type="password">
        </div>
-       <div class='pure-u-1-3'>
+       <div class='u-1-3'>
         <label>E-Mail</label>
         <input type="email" required>
        </div>
 
-       <div class='pure-u-1-3'>
+       <div class='u-1-3'>
         <label>City</label>
         <input type="text">
        </div>
 
-       <div class='pure-u-1-3'>
+       <div class='u-1-3'>
         <label>State</label>
-        <select class='pure-input-medium'>
+        <select class='input-medium'>
          <option>AL</option>
          <option>CA</option>
          <option>IL</option>
@@ -75,11 +72,11 @@
         </select>
        </div>
       </div>
-      <label class="pure-checkbox">
+      <label class="checkbox">
        <input type="checkbox"> I've read the terms and conditions
       </label>
-      <button type="submit" class='pure-button'>Submit</button>
-      <button type="reset" class='pure-button'>Reset</button>
+      <button type="submit" class='button'>Submit</button>
+      <button type="reset" class='button'>Reset</button>
       </fieldset>
      </form>
 
@@ -87,9 +84,9 @@
     <h2>Stacked Form</h2>
 
     <p>
-     Apply stacked label styling to any form by applying the <code>pure-form-stacked</code> classname.
+     Apply stacked label styling to any form by applying the <code>form-stacked</code> classname.
     </p>
-    <form class="pure-form pure-form-stacked">
+    <form class="form form-stacked">
      <fieldset>
      <legend>Legend</legend>
      <label>First Name</label>
@@ -98,24 +95,24 @@
      <input type="password">
      <label>E-Mail</label>
      <input type="email" required>
-     <aside class='pure-help-inline'>This is a required field.</aside>
+     <aside class='help-inline'>This is a required field.</aside>
      <label>City</label>
      <input type="text">
-     <aside class='pure-form-message'>This is another required field.</aside>
+     <aside class='form-message'>This is another required field.</aside>
 
      <label>State</label>
-     <select class='pure-input-medium'>
+     <select class='input-medium'>
       <option>AL</option>
       <option>CA</option>
       <option>IL</option>
       <option>MD</option>
       <option>NY</option>
      </select>
-     <label class="pure-checkbox">
+     <label class="checkbox">
       <input type="checkbox"> I've read the terms and conditions
      </label>
-     <button type="submit" class='pure-button notice'>Submit</button>
-     <button type="reset" class='pure-button'>Reset</button>
+     <button type="submit" class='button notice'>Submit</button>
+     <button type="reset" class='button'>Reset</button>
 
      </fieldset>
     </form>
@@ -124,39 +121,39 @@
 
      <p>Aligned forms are great for standard forms that look well-aligned. The labels are right-aligned against the form input controls.</p>
 
-     <form class="pure-form pure-form-aligned">
+     <form class="form form-aligned">
       <fieldset>
-      <div class="pure-control-group">
+      <div class="control-group">
        <label>Username</label>
        <input type="text" placeholder="Username">
-       <aside class='pure-form-message-inline'>This is a <code>pure-form-message-inline</code> field.</aside>
+       <aside class='form-message-inline'>This is a <code>form-message-inline</code> field.</aside>
       </div>
 
-      <div class="pure-control-group">
+      <div class="control-group">
        <label>Password</label>
        <input type="password" placeholder="Password">
-       <aside class='pure-help-inline'>This is a <code>pure-help-inline</code> field. Deprecated.</aside>
+       <aside class='help-inline'>This is a <code>help-inline</code> field. Deprecated.</aside>
       </div>
 
-      <div class="pure-control-group">
+      <div class="control-group">
        <label>Email Address</label>
        <input type="text" placeholder="Email Address">
       </div>
-      <div class="pure-control-group">
+      <div class="control-group">
        <label>Here's a button</label>
-       <input type="button" value="Button" class="pure-button">
+       <input type="button" value="Button" class="button">
       </div>
 
-      <div class="pure-control-group">
+      <div class="control-group">
        <label>Supercalifragilistic Label</label>
        <input type="text" placeholder="Enter something here...">
       </div>
 
-      <div class="pure-controls">
-       <label class="pure-checkbox">
+      <div class="controls">
+       <label class="checkbox">
         <input type="checkbox"> Remember Me
        </label>
-       <button type="submit" class="pure-button">Submit</button>
+       <button type="submit" class="button">Submit</button>
       </div>
       </fieldset>
      </form>
@@ -165,16 +162,16 @@
 
      <p>Grouped inputs are great for grouping small sets of text-based input elements. They work well for sign-up forms, and look natural on mobile devices.</p>
 
-     <form class="pure-form">
-      <fieldset class='pure-group'>
-       <input type="text" class="pure-input-1-3" placeholder='Username'>
-       <input type="text" class="pure-input-1-3" placeholder='Password'>
-       <input type="text" class="pure-input-1-3" placeholder='Email'>
+     <form class="form">
+      <fieldset class='group'>
+       <input type="text" class="input-1-3" placeholder='Username'>
+       <input type="text" class="input-1-3" placeholder='Password'>
+       <input type="text" class="input-1-3" placeholder='Email'>
       </fieldset>
-      <fieldset class='pure-group'>
-       <input type="text" class="pure-input-1-3" placeholder='Another Group'>
-       <input type="text" class="pure-input-1-3" placeholder='More Stuff'>
-       <button type="submit" class="pure-button pure-input-1-3">Sign in</button>
+      <fieldset class='group'>
+       <input type="text" class="input-1-3" placeholder='Another Group'>
+       <input type="text" class="input-1-3" placeholder='More Stuff'>
+       <button type="submit" class="button input-1-3">Sign in</button>
       </fieldset>
      </form>
 
@@ -183,88 +180,88 @@
 
      <h2>Input Sizing</h2>
 
-     <p>You can take advantage of YUI Grids and the <code>pure-input-block</code> class to create fluid width inputs in practically any size that you want.</p>
+     <p>You can take advantage of YUI Grids and the <code>input-block</code> class to create fluid width inputs in practically any size that you want.</p>
 
-     <form class="pure-form">
-       <input class="pure-input-1" type="text" placeholder=".pure-input-1"><br/>
-       <input class="pure-input-2-3" type="text" placeholder=".pure-input-2-3"><br/>
-       <input class="pure-input-1-2" type="text" placeholder=".pure-input-1-2"><br/>
-       <input class="pure-input-1-3" type="text" placeholder=".pure-input-1-3"><br/>
-       <input class="pure-input-1-4" type="text" placeholder=".pure-input-1-4"><br/>
+     <form class="form">
+       <input class="input-1" type="text" placeholder=".input-1"><br/>
+       <input class="input-2-3" type="text" placeholder=".input-2-3"><br/>
+       <input class="input-1-2" type="text" placeholder=".input-1-2"><br/>
+       <input class="input-1-3" type="text" placeholder=".input-1-3"><br/>
+       <input class="input-1-4" type="text" placeholder=".input-1-4"><br/>
      </form>
 
-     <div class="pure-g sizing">
-       <form class="pure-form">
-        <div class="pure-u-1-4">
-         <input class="pure-input-1" type="text" placeholder=".pure-u-1-4">
+     <div class="g sizing">
+       <form class="form">
+        <div class="u-1-4">
+         <input class="input-1" type="text" placeholder=".u-1-4">
         </div>
-        <div class="pure-u-3-4">
-         <input class="pure-input-1" type="text" placeholder=".pure-u-3-4">
-        </div>
-
-
-        <div class="pure-u-1-2">
-         <input class="pure-input-1" type="text" placeholder=".pure-u-1-2">
-        </div>
-        <div class="pure-u-1-2">
-         <input class="pure-input-1" type="text" placeholder=".pure-u-1-2">
+        <div class="u-3-4">
+         <input class="input-1" type="text" placeholder=".u-3-4">
         </div>
 
 
-        <div class="pure-u-1-8">
-         <input class="pure-input-1" type="text" placeholder=".pure-u-1-8">
+        <div class="u-1-2">
+         <input class="input-1" type="text" placeholder=".u-1-2">
         </div>
-        <div class="pure-u-1-8">
-         <input class="v" type="text" placeholder=".pure-u-1-8">
-        </div>
-        <div class="pure-u-1-4">
-         <input class="pure-input-1" type="text" placeholder=".pure-u-1-4">
-        </div>
-        <div class="pure-u-1-2">
-         <input class="pure-input-1" type="text" placeholder=".pure-u-1-2">
+        <div class="u-1-2">
+         <input class="input-1" type="text" placeholder=".u-1-2">
         </div>
 
 
-        <div class="pure-u-1-5">
-         <input class="pure-input-1" type="text" placeholder=".pure-u-1-5">
+        <div class="u-1-8">
+         <input class="input-1" type="text" placeholder=".u-1-8">
         </div>
-        <div class="pure-u-2-5">
-         <input class="pure-input-1" type="text" placeholder=".pure-u-2-5">
+        <div class="u-1-8">
+         <input class="v" type="text" placeholder=".u-1-8">
         </div>
-        <div class="pure-u-2-5">
-         <input class="pure-input-1" type="text" placeholder=".pure-u-2-5">
+        <div class="u-1-4">
+         <input class="input-1" type="text" placeholder=".u-1-4">
+        </div>
+        <div class="u-1-2">
+         <input class="input-1" type="text" placeholder=".u-1-2">
         </div>
 
-        <div class="pure-u-1">
-         <input class="pure-input-1" type="text" placeholder=".pure-u-1">
+
+        <div class="u-1-5">
+         <input class="input-1" type="text" placeholder=".u-1-5">
+        </div>
+        <div class="u-2-5">
+         <input class="input-1" type="text" placeholder=".u-2-5">
+        </div>
+        <div class="u-2-5">
+         <input class="input-1" type="text" placeholder=".u-2-5">
+        </div>
+
+        <div class="u-1">
+         <input class="input-1" type="text" placeholder=".u-1">
         </div>
        </form>
      </div>
 
      <h2>Invalid Inputs</h2>
      <p>Add the required attribute to any form control.</p>
-     <form class="pure-form">
+     <form class="form">
        <input type="email" placeholder="Requires an email" required>
      </form>
 
      <h2>Disabled Inputs</h2>
      <p>Add the disabled attribute to any form control.</p>
-     <form class="pure-form">
-       <input class="pure-input-xlarge" id="disabledInput" type="text" placeholder="Disabled input here..." disabled>
+     <form class="form">
+       <input class="input-xlarge" id="disabledInput" type="text" placeholder="Disabled input here..." disabled>
      </form>
 
      <h2>Rounded Form</h2>
-     <p>Add the pure-input-rounded classname to any form control.</p>
+     <p>Add the input-rounded classname to any form control.</p>
 
-     <form class="pure-form">
-       <input type="text" class="pure-input-rounded">
-       <button type="submit" class='pure-button'>Search</button>
+     <form class="form">
+       <input type="text" class="input-rounded">
+       <button type="submit" class='button'>Search</button>
      </form>
 
 
      <h2>Selects</h2>
-     <form class="pure-form">
-       <select class='pure-input-medium'>
+     <form class="form">
+       <select class='input-medium'>
         <option>Brazil</option>
         <option>Canada</option>
         <option>United States</option>
@@ -273,7 +270,7 @@
        </select>
 
 
-     <select multiple="multiple" class="pure-input-large">
+     <select multiple="multiple" class="input-large">
       <option>Brazil</option>
       <option>Canada</option>
       <option>United States</option>
@@ -283,40 +280,40 @@
      </form>
 
      <h2>Checkboxes and Radios</h2>
-     <form class="pure-form">
-       <label class="pure-checkbox">
+     <form class="form">
+       <label class="checkbox">
         <input type="checkbox" value="">
         Here's option one.
        </label>
 
-       <label class="pure-radio">
+       <label class="radio">
         <input type="radio" name="optionsRadios" id="optionsRadios1" value="option1" checked>
         Here's a radio button. You can choose this one..
        </label>
-       <label class="pure-radio">
+       <label class="radio">
         <input type="radio" name="optionsRadios" id="optionsRadios2" value="option2">
         ..Or this one!
        </label>
      </form>
 
      <h2>Help text</h2>
-     <form class="pure-form pure-form-stacked">
+     <form class="form form-stacked">
       <fieldset>
         <label>Last Name</label>
         <input type="text" />
-        <aside class="pure-form-message">Block help text</aside>
+        <aside class="form-message">Block help text</aside>
       </fieldset>
      </form>
     </div>
 
-    <div class= "pure-g-r">
-      <div class= "pure-u-1">
-        <form class="pure-form">
-          <a class="pure-button pure-button-primary">Anchor</a>
-          <button class="pure-button pure-button-primary">Button</button>
-          <input type="submit" class="pure-button pure-button-primary" value="Submit" />
-          <input type="button" class="pure-button pure-button-primary" value="Input Button" />
-          <input type="reset" class="pure-button pure-button-primary" value="Reset" />
+    <div class= "g-r">
+      <div class= "u-1">
+        <form class="form">
+          <a class="button button-primary">Anchor</a>
+          <button class="button button-primary">Button</button>
+          <input type="submit" class="button button-primary" value="Submit" />
+          <input type="button" class="button button-primary" value="Input Button" />
+          <input type="reset" class="button button-primary" value="Reset" />
         </form>
       </div>
     </div>
