Fixes in responsive menus.

--- a/examples/grids/fixed-r.html
+++ b/examples/grids/fixed-r.html
@@ -18,7 +18,7 @@
 </head>
 <body class="responsive">
 
-<div class="fixed container">
+<div class="fixed-width container">
   <h1>Responsive, Fixed grid</h1>
 
   <div class="grid">
