--- a/examples/grids/fixed.html
+++ b/examples/grids/fixed.html
@@ -21,7 +21,7 @@
 <div class="container">
   <h1>Non responsive, fixed grid</h1>
 
-  <div class="fixed grid">
+  <div class="fixed-width grid">
     <div class="span6">
         <div class="l-box">
             <h3>Fast</h3>
