--- a/examples/columns/index.html
+++ b/examples/columns/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <title>Columns Example</title>
-  <link rel="stylesheet" href="../../build/pure-min.css">
+  <link rel="stylesheet" href="../../build/base.css">
 
   <style type="text/css">
     .first { background-color: #aaa }
