--- a/examples/extras/alerts.html
+++ b/examples/extras/alerts.html
@@ -10,7 +10,6 @@
   <style type="text/css">
     .alert { margin: 30px 0 }
   </style>
-
 </head>
 <body class="container">
 
@@ -26,7 +25,7 @@
 
 
 <div class="alert alert-success">
-  <a href="#close" class="close-button"></a>
+  <a href="#close" class="left close-button"></a>
   This is very important.
 </div>
 
