Updated/added examples.

--- a/examples/extras/box.html
+++ b/examples/extras/box.html
@@ -4,14 +4,14 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <title>Columns Example</title>
+  <title>Box Example</title>
   <link rel="stylesheet" href="../../build/base.css">
 
   <style type="text/css">
     body { background: #ccc }
   </style>
 </head>
-<body>
+<body class="responsive">
   <div class="box">
     <h2>Sign in</h2>
     <form>
@@ -23,7 +23,7 @@
         <label>Password</label>
         <input type="password" />
       </p>
-      <button type="submit">Submit</button>
+      <button class="btn btn-primary" type="submit">Submit</button>
     </form>
   </div>
 </div>
