--- a/examples/menus/navbar.html
+++ b/examples/menus/navbar.html
@@ -32,6 +32,14 @@
     </ul>
   </div>
 
+  <div class="navbar">
+    <ul class="container menu">
+      <li><a class="brand" href="#">My App</a></li>
+      <li><a href="#">Foo</a></li>
+      <li><a class="btn btn-primary" href="#">A button!</a></li>
+    </ul>
+  </div>
+
   <div class="responsive navbar">
     <div class="container">
       <a href="#menu3" class="toggle-visible menu-icon"></a>
@@ -39,6 +47,38 @@
         <li><a href="#">Home</a></li>
         <li><a href="#">Foo</a></li>
         <li><a href="#">Something</a></li>
+      </ul>
+    </div>
+  </div>
+
+  <div class="navbar">
+    <div class="container">
+      <a class="brand" href="/">Home</a>
+      <a href="#menu2" class="toggle-visible right menu-icon"></a>
+
+      <ul class="right menu" id="menu2">
+        <li class="dropdown">
+          <a class="toggle-visible" href="#dropdown11">
+            Dropdown on click
+            <span class="caret"></span>
+          </a>
+          <ul id="dropdown11">
+            <li><a href="#">Foo</a></li>
+            <li><a href="#">Bar</a></li>
+            <li><a href="#">Baz</a></li>
+          </ul>
+        </li>
+        <li><a href="#">Home</a></li>
+        <li class="hover dropdown">
+          <span>Dropdown on hover</span>
+          <ul>
+            <li><a href="#">Foo</a></li>
+            <li><a href="#">Bar</a></li>
+            <li><a href="#">Baz</a></li>
+          </ul>
+        </li>
+
+        <li><a href="#">Logout</a></li>
       </ul>
     </div>
   </div>
@@ -60,11 +100,11 @@
           </ul>
         </li>
         <li class="dropdown">
-          <a class="toggle-visible" href="#dropdown1">
+          <a class="toggle-visible" href="#dropdown22">
             Dropdown on click
             <span class="caret"></span>
           </a>
-          <ul id="dropdown1">
+          <ul id="dropdown22">
             <li><a href="#">Foo</a></li>
             <li><a href="#">Bar</a></li>
             <li><a href="#">Baz</a></li>
