--- a/examples/tables/tables.html
+++ b/examples/tables/tables.html
@@ -1,28 +1,26 @@
 <!DOCTYPE html>
-
 <html>
 <head>
-  <link rel="stylesheet" type="text/css" href="../../../../build/tables-min.css">
+  <link rel="stylesheet" type="text/css" href="../../../../build/base-min.css">
   <style>
-
     table {
-      width:480px;
+      width: 480px;
     }
-
   </style>
 </head>
 <body>
+
+  <div class="container">
+
   <div class="intro">
     <h1>Pure Table CSS</h1>
-    <h2>
-      Simple CSS for HTML Tables
-    </h2>
+    <h2>Simple CSS for HTML Tables</h2>
   </div>
 
   <h2>Default Table</h2>
 
-  <p>Add the <code>pure-table</code> classname to a table to style an HTML table This class adds appropriate padding and borders to table elements, and increases the emphasis on the header.</p>
-  <table class="pure-table">
+  <p>Add the <code>table</code> classname to a table to style an HTML table This class adds appropriate padding and borders to table elements, and increases the emphasis on the header.</p>
+  <table class="table">
       <thead>
           <tr>
             <th>#</th>
@@ -54,8 +52,8 @@
   </table>
 
   <h2>Bordered Table</h2>
-  <p>To add horizontal and vertical borders to all cells, add the <code>pure-table-bordered</code> classname to the <code>table</code> element.</p>
-  <table class="pure-table pure-table-bordered">
+  <p>To add horizontal and vertical borders to all cells, add the <code>table-bordered</code> classname to the <code>table</code> element.</p>
+  <table class="table table-bordered">
     <thead>
         <tr>
           <th>#</th>
@@ -87,8 +85,8 @@
   </table>
 
   <h2>Table with Horizontal Borders</h2>
-  <p>If you prefer to just have horizontal lines, add the <code>pure-table-horizontal</code> classname to the <code>table</code> element.</p>
-  <table class="pure-table pure-table-horizontal">
+  <p>If you prefer to just have horizontal lines, add the <code>table-horizontal</code> classname to the <code>table</code> element.</p>
+  <table class="table table-horizontal">
     <thead>
         <tr>
           <th>#</th>
@@ -120,8 +118,8 @@
   </table>
 
   <h2>Striped Table</h2>
-  <p>Large tables are easier to parse visually if rows are easily distinguishable. Adding the <code>pure-table-odd</code> class name to every other <code>tr</code> element changes the background of the row and creates a zebra-styled effect.</p>
-  <table class="pure-table">
+  <p>Large tables are easier to parse visually if rows are easily distinguishable. Adding the <code>table-odd</code> class name to every other <code>tr</code> element changes the background of the row and creates a zebra-styled effect.</p>
+  <table class="table">
     <thead>
         <tr>
           <th>#</th>
@@ -131,7 +129,7 @@
         </tr>
     </thead>
     <tbody>
-        <tr class='pure-table-odd'>
+        <tr class='table-odd'>
           <td>1</td>
           <td>Honda</td>
           <td>Accord</td>
@@ -143,7 +141,7 @@
           <td>Camry</td>
           <td>2012</td>
         </tr>
-        <tr class='pure-table-odd'>
+        <tr class='table-odd'>
           <td>3</td>
           <td>Hyundai</td>
           <td>Elantra</td>
@@ -155,7 +153,7 @@
           <td>Focus</td>
           <td>2008</td>
         </tr>
-        <tr class='pure-table-odd'>
+        <tr class='table-odd'>
           <td>5</td>
           <td>Nissan</td>
           <td>Sentra</td>
@@ -167,7 +165,7 @@
           <td>M3</td>
           <td>2009</td>
         </tr>
-        <tr class='pure-table-odd'>
+        <tr class='table-odd'>
           <td>7</td>
           <td>Honda</td>
           <td>Civic</td>
@@ -186,7 +184,7 @@
 
   <h3>Nth Child Selector Styling</h3>
   <p>Here's a striped table that's zebra-styled using <code>nth-child</code> selectors.</p>
-  <table class="pure-table pure-table-striped">
+  <table class="table table-striped">
     <thead>
         <tr>
           <th>#</th>
@@ -246,6 +244,8 @@
         </tr>
     </tbody>
   </table>
+
+  </div><!-- /container -->
 
 </body>
 </html>
